<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"

xmlns:tools="http://schemas.android.com/tools"
tools:context=".registration.Registration"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_margin="20dp"
android:orientation="vertical">

<TextView
    android:id="@+id/textRegistration"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="26sp"
    android:textAlignment="center"
    android:text="@string/Registration"
    android:textColor="@color/colorPrimaryDark"
    android:layout_margin="0dp">
</TextView>

<com.rengwuxian.materialedittext.MaterialEditText
    android:id="@+id/SeriesAndNumField"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/SeriesAndNumIDcard"
    android:inputType="text"
    android:text=""
    android:textColor="@color/colorPrimary"
    android:textColorHint="@color/colorPrimaryDark"
    android:textSize="15sp"

    app:met_baseColor="#05080A"
    app:met_floatingLabel="highlight"
    app:met_primaryColor="#C9AEBE"
    app:met_singleLineEllipsis="true">

</com.rengwuxian.materialedittext.MaterialEditText>


    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/phoneField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phoneField"
        android:inputType="textEmailAddress"
        android:text=""
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="15sp"

        app:met_baseColor="#05080A"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="#C9AEBE"
        app:met_singleLineEllipsis="true">

    </com.rengwuxian.materialedittext.MaterialEditText>

    <com.rengwuxian.materialedittext.MaterialEditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/passFieldReg"
    android:hint="@string/passField"
    android:inputType="textPassword"
    android:text=""
    android:textColor="@color/colorPrimary"
    android:textColorHint="@color/colorPrimaryDark"
    android:textSize="15sp"

    app:met_floatingLabel="highlight"
    app:met_baseColor="#05080A"
    app:met_primaryColor="#C9AEBE"
    app:met_singleLineEllipsis="true"
    >

</com.rengwuxian.materialedittext.MaterialEditText>

<com.rengwuxian.materialedittext.MaterialEditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/confirmPassField"
    android:hint="@string/ConfirmPass"
    android:inputType="textPassword"
    android:text=""
    android:textColor="@color/colorPrimary"
    android:textColorHint="@color/colorPrimaryDark"
    android:textSize="15sp"

    app:met_floatingLabel="highlight"
    app:met_baseColor="#05080A"
    app:met_primaryColor="#C9AEBE"
    app:met_singleLineEllipsis="true"
    >

</com.rengwuxian.materialedittext.MaterialEditText>

<Button
    android:id="@+id/btnRegister"
    android:layout_width="120dp"
    android:layout_height="0dp"
    android:textColor="@android:color/white"
    android:background="@drawable/btn_register"
    android:layout_weight="1"
    android:text="@string/btnRegister"
    style="?android:attr/buttonBarButtonStyle"/>

    <TextView
        android:id="@+id/ExampleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="11sp"
        android:textAlignment="center"
        android:text="Val ="
        android:textColor="@color/colorPrimaryDark"
        android:layout_margin="0dp">
    </TextView>


</LinearLayout>
