<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/mySubscribers_profile_image"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/com_facebook_profile_picture_blank_square"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/mySubscribers_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/StudentNameAndLastName"
            android:textSize="16sp"
            android:textStyle=""
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/mySubscribers_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/StudentGroup"
            android:textSize="13sp"
            android:textStyle=""
            android:textColor="@color/onlineText" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/btnAddMySubscribersToFriends"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/btnAddFriendRequest"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_add_friend"
                android:paddingEnd="10dp"
                android:paddingRight="10dp"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:textColor="@android:color/white"
                android:textSize="12sp">
            </Button>


        </LinearLayout>


    </LinearLayout>


</LinearLayout>